--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BlackrockDigital/startbootstrap-freelancer.git"
+  },
+  "scripts": {
+    "start": "gulp default"
   }
 
 }
